# rig

./: AGENTS.md  ATLAS_提案_MRDI.pptx  ATLAS_提案_MRDI_旧版设计备份.pptx  README.md  audit.md  implementation-plan.md  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore
data/m0-candidates/: MANIFEST.md
data/m0-candidates/empa-hipims/: hipims_raw.zip.sha256  record.json
docs/: BUILD_LOG.md  BUILD_STATE.md  M2-result-2026-07-16.md  M3-acceptance-2026-07-17.md  M3-acceptance-v2-2026-07-22.md  RESUME-STATE-2026-07-17.md  RESUME-STATE-2026-07-18.md  audit-2026-07-15.md  audit-2026-07-16.md  dimensionality-2026-07-17.md  false-success-study-2026-07-23.md  false-success-study.json  gradient-parity-2026-07-23.md  gradient-parity.json  m0-dataset-candidates-2026-07-18.md  m0-dataset-candidates.md  m2-botorch-slate-2026-07-23.md  m2-botorch-slate.json  m2-result-binding.json  m2-result.json  m3-acceptance-v2.json  m3-acceptance.json  mfl-bakeoff-build-spec-2026-07-18.md  mfl-follow-on-research-2026-07-18.md  multitool-rehearsal-2026-07-23.md  multitool-rehearsal.json  new-process-onboarding.md  prereg-mfl-bakeoff-2026-07-17.md  rig-explained.html
examples/: pecvd_example.toml  run_dimensionality_study.py  run_false_success_study.py  run_gradient_parity_study.py  run_m2_botorch_slate.py  run_m2_sweep.py  run_m3_acceptance.py  run_m3_acceptance_v2.py  run_multitool_rehearsal.py  tabular_minimal.toml
examples/mfl_bakeoff/: README.md  pre_register_targets.py  run_bakeoff.py  targets.json
examples/real_data/empa_hipims/: README.md  (+7 more)
src/rig/: __init__.py  constraints.py  interfaces.py  qualification.py  registry.py  schema.py  transforms.py
src/rig_adapters/: __init__.py
tests/: conftest.py  test_active_acquisition.py  test_active_loop.py  test_active_mbe.py  test_amortized.py  test_botorch_bo.py  test_botorch_slate.py  test_campaign.py  test_conditional_coverage.py  test_conformal.py  test_conformal_feasibility.py  test_constraints.py  test_d2_integration.py  test_distill.py  test_empa_ingest.py  test_empa_pooled.py  test_ensemble.py  test_eval_calibration.py  test_eval_exploitation.py  test_eval_inverse_metrics.py  test_eval_mbe.py  test_eval_survival.py  test_false_success_study.py  test_frame_validation.py  test_gp.py  test_gradient_parity.py  test_interfaces.py  test_inverse.py  test_inverse_hardening.py  test_inverse_mbe.py  test_m2_comparison.py  test_m2_sweep.py  test_m3_acceptance.py  test_m3_acceptance_v2.py  test_mbe_adapter.py  test_mbe_generate.py  test_mbe_machine.py  test_mbe_verifier.py  test_mfl_baseline.py  test_mondrian.py  (+13 more)
tests/fixtures/: mbe_silico_smoke.jsonl
(+79 files in other folders)
